--- a/mic-main/package.json
+++ b/mic-main/package.json
@@ -26,6 +26,7 @@
     "pug-plain-loader": "^1.1.0",
     "qiankun": "^2.10.13",
     "qs": "^6.11.2",
+    "vite-plugin-vue-images": "^0.6.1",
     "vue": "^3.3.4",
     "vue-i18n": "^9.1.9",
     "vue-router": "^4.2.5"
