--- a/mic-pc-home/package.json
+++ b/mic-pc-home/package.json
@@ -24,6 +24,7 @@
     "nprogress": "^0.2.0",
     "pinia": "^2.1.6",
     "vite-plugin-qiankun": "^1.0.15",
+    "vite-plugin-vue-images": "^0.6.1",
     "vue": "^3.3.4",
     "vue-clipboard3": "^2.0.0",
     "vue-i18n": "^9.1.9",
